[package]
name = "covid19_uk_rs"
version = "1.1.1"
authors = ["Max Heaton <dh64784@gmail.com>"]
edition = "2018"
description = "Unofficial Rust library for the 'Coronavirus in the UK' data API"
repository = "https://github.com/Lyrenhex/covid19-uk-rs"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = [ "blocking", "gzip" ] }
json = "0.12.4"
time = "0.2.16"
